I have begun work on the portfolio page. I'm having issues with the spacing for the row however.

--- a/style/skills.css
+++ b/style/skills.css
@@ -40,7 +40,7 @@
 .left_pink_rec {
     height: 7px;
     width: 50px;
-    background: red;
+    background: #ff005c;
     position: absolute;
     z-index: 1;
 }
@@ -56,7 +56,7 @@
 .right_pink_rec {
     height: 7px;
     width: 50px;
-    background: red;
+    background: #ff005c;
     position: absolute;
     z-index: 1;
 }
@@ -67,7 +67,7 @@
     }
     
     #mid, #bot {
-        margin-top: 20px;
+        margin-top: 25px;
     }
 }
 
@@ -86,7 +86,7 @@
     }
     
     #oddone {
-        margin-top: 20px;
+        margin-top: 25px;
     }
 }
 
